--- a/AboutUI.resx
+++ b/AboutUI.resx
@@ -119,7 +119,7 @@
   </resheader>
   <data name="label1.Text" xml:space="preserve">
     <value>Made with &lt;3 from ClickNin, TinedPakGamer, Tech Archives, santu, XenonyxBlaze,
-LureCore and kostya.
+LureCore, kostya and Generial Element.
 
 BlueSky Launcher is a Minecraft for Windows 10 launcher allowing you to play it
 without buying the game.
