--- a/Form1.resx
+++ b/Form1.resx
@@ -121,14 +121,12 @@
     <value>ABOUT
 
 BlueSky Launcher
-Beta 12 - Early Test 1
+Beta 13
 
 
 By ClickNin, TinedPakGamer, frakod, XenonyxBlaze, kostya, santu, LureCore and General Element.
 
-3rd Party Clients are not my product and only included in BlueSky as a DLL Injector. All client here are belonged to it's respective owner.
-
-WARNING: BlueSky Beta 12 is an highly experimental launcher and shoudn't be used on your promary PC unless you know what you are doing.
+WARNING: BlueSky Beta 13 is an highly experimental launcher and shoudn't be used on your primary PC unless you know what you are doing.
 
 3rd Party Software used:
 
